--- a/Core/Core.xcodeproj/xcshareddata/xcschemes/Core-Aggregate-Staging.xcscheme
+++ b/Core/Core.xcodeproj/xcshareddata/xcschemes/Core-Aggregate-Staging.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "32F258DF21E58689001FD9C0"
-               BuildableName = "RPSRDN.framework"
-               BlueprintName = "RDN"
-               ReferencedContainer = "container:RDN.xcodeproj">
+               BlueprintIdentifier = "325FF74721F065B400A899CF"
+               BuildableName = "Aggregate"
+               BlueprintName = "Aggregate"
+               ReferencedContainer = "container:Core.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -28,31 +28,12 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "32F258E821E58689001FD9C0"
-               BuildableName = "RDNTests.xctest"
-               BlueprintName = "RDNTests"
-               ReferencedContainer = "container:RDN.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "32F258DF21E58689001FD9C0"
-            BuildableName = "RPSRDN.framework"
-            BlueprintName = "RDN"
-            ReferencedContainer = "container:RDN.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Staging"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -64,10 +45,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "32F258DF21E58689001FD9C0"
-            BuildableName = "RPSRDN.framework"
-            BlueprintName = "RDN"
-            ReferencedContainer = "container:RDN.xcodeproj">
+            BlueprintIdentifier = "325FF74721F065B400A899CF"
+            BuildableName = "Aggregate"
+            BlueprintName = "Aggregate"
+            ReferencedContainer = "container:Core.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -82,10 +63,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "32F258DF21E58689001FD9C0"
-            BuildableName = "RPSRDN.framework"
-            BlueprintName = "RDN"
-            ReferencedContainer = "container:RDN.xcodeproj">
+            BlueprintIdentifier = "325FF74721F065B400A899CF"
+            BuildableName = "Aggregate"
+            BlueprintName = "Aggregate"
+            ReferencedContainer = "container:Core.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
