--- a/A2A/A2A.xcodeproj/xcshareddata/xcschemes/A2A-Aggregate.xcscheme
+++ b/A2A/A2A.xcodeproj/xcshareddata/xcschemes/A2A-Aggregate.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1010"
+   LastUpgradeVersion = "1130"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "325FF74E21F0709800A899CF"
+               BlueprintIdentifier = "32EE305324163F4D00E6D076"
                BuildableName = "Aggregate"
                BlueprintName = "Aggregate"
-               ReferencedContainer = "container:RUNA.xcodeproj">
+               ReferencedContainer = "container:A2A.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -29,8 +29,6 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -42,17 +40,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "325FF74E21F0709800A899CF"
-            BuildableName = "Aggregate"
-            BlueprintName = "Aggregate"
-            ReferencedContainer = "container:RUNA.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -63,10 +50,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "325FF74E21F0709800A899CF"
+            BlueprintIdentifier = "32EE305324163F4D00E6D076"
             BuildableName = "Aggregate"
             BlueprintName = "Aggregate"
-            ReferencedContainer = "container:RUNA.xcodeproj">
+            ReferencedContainer = "container:A2A.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
