--- a/RUNA/Banner.xcodeproj/xcshareddata/xcschemes/Banner-Aggregate-Staging.xcscheme
+++ b/RUNA/Banner.xcodeproj/xcshareddata/xcschemes/Banner-Aggregate-Staging.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "325FF74E21F0709800A899CF"
                BuildableName = "Aggregate"
                BlueprintName = "Aggregate"
-               ReferencedContainer = "container:RUNA.xcodeproj">
+               ReferencedContainer = "container:Banner.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -31,7 +31,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Staging"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -40,15 +40,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "325FF74E21F0709800A899CF"
-            BuildableName = "Aggregate"
-            BlueprintName = "Aggregate"
-            ReferencedContainer = "container:RUNA.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -56,15 +47,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "325FF74E21F0709800A899CF"
-            BuildableName = "Aggregate"
-            BlueprintName = "Aggregate"
-            ReferencedContainer = "container:RUNA.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
