--- a/Banner/Banner.xcodeproj/xcshareddata/xcschemes/Banner.xcscheme
+++ b/Banner/Banner.xcodeproj/xcshareddata/xcschemes/Banner.xcscheme
@@ -42,6 +42,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "32F258E821E58689001FD9C0"
+               BuildableName = "BannerTests.xctest"
+               BlueprintName = "BannerTests"
+               ReferencedContainer = "container:Banner.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
