--- a/Core/Core.xcodeproj/xcshareddata/xcschemes/Core.xcscheme
+++ b/Core/Core.xcodeproj/xcshareddata/xcschemes/Core.xcscheme
@@ -37,6 +37,15 @@
             ReferencedContainer = "container:Core.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "32F258C421E5866D001FD9C0"
+            BuildableName = "CoreTests.xctest"
+            BlueprintName = "CoreTests"
+            ReferencedContainer = "container:Core.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
